--- a/contacts.html
+++ b/contacts.html
@@ -14,6 +14,9 @@
     <!-- animate -->
     <link rel="stylesheet" type="text/css" href="css/animate.css">
 
+    <!-- magnific -->
+    <link rel="stylesheet" href="css/magnific-popup.css">
+
     <!-- custom css -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -147,7 +150,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/slider.js"></script>
+    <script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
