--- a/fotosessions.html
+++ b/fotosessions.html
@@ -14,6 +14,9 @@
     <!-- animate -->
     <link rel="stylesheet" type="text/css" href="css/animate.css">
 
+    <!-- magnific -->
+    <link rel="stylesheet" href="css/magnific-popup.css">
+
     <!-- custom css -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -65,86 +68,14 @@
           <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
         </div>
         <div class="row row-padding-0">
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal1">
-              <img src="img/sw1.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal1" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw1.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-           <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal2">
-              <img src="img/sw2.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal2" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw2.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal3">
-              <img src="img/sw3.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal3" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw3.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal4">
-              <img src="img/sw4.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal4" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw4.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
+        <div class="photo-preview">
+          <div class="row photo-preview-wrapper">
+            <a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
+            <a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
+            <a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
+            <a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
+          </div>          
+        </div>
 
         </div>
 
@@ -168,86 +99,14 @@
           <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
         </div>
         <div class="row row-padding-0">
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal1">
-              <img src="img/sw1.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal1" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw1.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
+          <div class="photo-preview">
+            <div class="row photo-preview-wrapper">
+              <a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
+              <a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
+              <a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
+              <a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
+            </div>          
           </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-           <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal2">
-              <img src="img/sw2.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal2" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw2.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal3">
-              <img src="img/sw3.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal3" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw3.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal4">
-              <img src="img/sw4.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal4" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw4.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
 
         </div>
 
@@ -270,86 +129,14 @@
           <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
         </div>
         <div class="row row-padding-0">
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal1">
-              <img src="img/sw1.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal1" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw1.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
+          <div class="photo-preview">
+            <div class="row photo-preview-wrapper">
+              <a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
+              <a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
+              <a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
+              <a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
+            </div>          
           </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-           <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal2">
-              <img src="img/sw2.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal2" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw2.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal3">
-              <img src="img/sw3.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal3" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw3.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal4">
-              <img src="img/sw4.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal4" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw4.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
 
         </div>
 
@@ -372,86 +159,14 @@
           <p class="short-description col-md-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat in culpa qui officia deserunt mollit anim id est laborum</p>
         </div>
         <div class="row row-padding-0">
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal1">
-              <img src="img/sw1.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal1" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw1.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
+          <div class="photo-preview">
+            <div class="row photo-preview-wrapper">
+              <a href="img/sw1.jpg" class="min-photo col-md-3"><img src="img/sw1.jpg" alt=""></a>
+              <a href="img/sw2.jpg" class="min-photo col-md-3"><img src="img/sw2.jpg" alt=""></a>
+              <a href="img/sw3.jpg" class="min-photo col-md-3"><img src="img/sw3.jpg" alt=""></a>
+              <a href="img/sw4.jpg" class="min-photo col-md-3"><img src="img/sw4.jpg" alt=""></a>
+            </div>          
           </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-           <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal2">
-              <img src="img/sw2.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal2" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw2.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal3">
-              <img src="img/sw3.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal3" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw3.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
-          <!-- Одна картинка  -->
-          <div class="image-wrapper col-md-3" >
-
-            <div class="min-img-wrapper open-photo" data-target="openModal4">
-              <img src="img/sw4.jpg" class="min-img">
-              <div class="min-img-layout">
-                <div class="loop"></div>
-              </div>
-            </div>
-
-            <div id="openModal4" class="modalDialog">
-              <div class="max-img-wrapper">
-                <img src="img/sw4.jpg" class="max-img">
-              </div>
-              <span class="control-arrows left-arrow"><i class="fa fa-angle-left" aria-hidden="true"></i></span>
-              <span class="control-arrows right-arrow"><i class="fa fa-angle-right" aria-hidden="true"></i></span>
-            </div>
-
-          </div>
-          <!-- Одна картинка  -->
 
         </div>
 
@@ -532,7 +247,7 @@
   	<div id="m-team">
   		<span>&copy 2017 designed and developed by <a href="#" class="underline-link">m-team</a> web-studio </span>
   	</div>
-  	
+  
   </footer>
 
 
@@ -542,7 +257,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/slider.js"></script>
+    <script src="js/jquery.magnific-popup.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
