--- a/faq.html
+++ b/faq.html
@@ -25,6 +25,9 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/owl.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
+
+  <!-- adaptive -->
+  <link rel="stylesheet" href="css/adaptive.css">
   </head>
   <body>
   <div class="body-wrapper">
