--- a/fotosessions.html
+++ b/fotosessions.html
@@ -20,6 +20,9 @@
     <!-- custom css -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+
+    <!-- adaptive -->
+    <link rel="stylesheet" href="css/adaptive.css">
   </head>
   <body>
   <header>
